# TypeCrab

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  index.html  text.txt
assets/: apple-touch-icon-0973477a5b8d4ab5.png.br  horizontal-white-color-fb0927a22e782567.png.br  main-0d4b78281e4654c3.css  main-0d4b78281e4654c3.css.br  settings-2aa12551dfb6e498.css  settings-2aa12551dfb6e498.css.br  site-80f76cb755574384.webmanifest  site-80f76cb755574384.webmanifest.br  web-7845ab25ea781165.js  web-7845ab25ea781165.js.br  web_bg-a941bbd2a8c24aea.wasm  web_bg-a941bbd2a8c24aea.wasm.br
assets/fonts/PlusJakartaSans/License/: OFL.txt.br
assets/fonts/PlusJakartaSans/Web/: README.md.br
assets/fonts/PlusJakartaSans/Web/css/: plus-jakarta-sans.css  plus-jakarta-sans.css.br
assets/fonts/PlusJakartaSans/Web/fonts/: PlusJakartaSans-Bold.eot.br  PlusJakartaSans-Bold.ttf.br  PlusJakartaSans-Bold.woff.br  PlusJakartaSans-Bold.woff2.br  PlusJakartaSans-BoldItalic.eot.br  PlusJakartaSans-BoldItalic.ttf.br  PlusJakartaSans-BoldItalic.woff.br  PlusJakartaSans-BoldItalic.woff2.br  PlusJakartaSans-ExtraBold.eot.br  PlusJakartaSans-ExtraBold.ttf.br  PlusJakartaSans-ExtraBold.woff.br  PlusJakartaSans-ExtraBold.woff2.br  PlusJakartaSans-ExtraBoldItalic.eot.br  PlusJakartaSans-ExtraBoldItalic.ttf.br  PlusJakartaSans-ExtraBoldItalic.woff.br  PlusJakartaSans-ExtraBoldItalic.woff2.br  PlusJakartaSans-ExtraLight.eot.br  PlusJakartaSans-ExtraLight.ttf.br  PlusJakartaSans-ExtraLight.woff.br  PlusJakartaSans-ExtraLight.woff2.br  PlusJakartaSans-ExtraLightItalic.eot.br  PlusJakartaSans-ExtraLightItalic.ttf.br  PlusJakartaSans-ExtraLightItalic.woff.br  PlusJakartaSans-ExtraLightItalic.woff2.br  PlusJakartaSans-Italic.eot.br  PlusJakartaSans-Italic.ttf.br  PlusJakartaSans-Italic.woff.br  PlusJakartaSans-Italic.woff2.br  PlusJakartaSans-Light.eot.br  PlusJakartaSans-Light.ttf.br  PlusJakartaSans-Light.woff.br  PlusJakartaSans-Light.woff2.br  PlusJakartaSans-LightItalic.eot.br  PlusJakartaSans-LightItalic.ttf.br  PlusJakartaSans-LightItalic.woff.br  PlusJakartaSans-LightItalic.woff2.br  PlusJakartaSans-Medium.eot.br  PlusJakartaSans-Medium.ttf.br  PlusJakartaSans-Medium.woff.br  PlusJakartaSans-Medium.woff2.br  (+24 more)
assets/images/icons/: android-chrome-192x192.png.br  android-chrome-512x512.png.br  favicon-16x16.png.br  favicon-32x32.png.br  favicon.ico.br
assets/images/logos/: horizontal-black-color.png.br  horizontal-black.png.br  horizontal-white.png.br  icon-black.png.br  icon-color.png.br  icon-white.png.br
assets/quotes/code-cpp/: hello.txt.br
assets/quotes/en/: linus.txt.br
assets/schemes/: catppuccin.css  catppuccin.css.br  dracula.css  dracula.css.br  github.css  github.css.br  gruvbox.css  gruvbox.css.br  monokai.css  monokai.css.br
assets/words/: code-cpp.txt.br  code-js.txt.br  code-rust.txt.br  en.txt  en.txt.br  ru.txt.br  sk.txt.br
cli/: Cargo.toml
cli/src/: logic.rs  main.rs  test.rs
cli/src/tui/: components.rs  mod.rs  result.rs  scheme.rs  start.rs  test.rs
core/: .gitignore  Cargo.toml  build.rs
core/src/: config.rs  generator.rs  lib.rs  listing.rs  response.rs  results.rs  test.rs
doc/: DOCUMENTATION.md
docs/: DOCUMENTATION.md  PROPOSAL.md  REPORT.md
resources/quotes/en/: linus.txt
resources/schemes/: catppuccin.css  dracula.css  github.css  gruvbox.css  monokai.css
resources/words/: ru.txt  sk.txt
src/: main.rs
web/: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  rust_flags.sh  start-dev.sh
web/assets/: site.webmanifest
web/assets/styling/: main.css  settings.css
web/src/: lib.rs  main.rs
web/src/components/: footer.rs  header.rs  letter.rs  mod.rs  results.rs  test.rs
web/src/pages/: mod.rs  settings.rs  test.rs
