# Cargo.toml
[package]

# project info
name = "TypeCrab"
description = "A minimalistic, customizable typing test"
authors = ["Anton Dmitriev <xdmitriev@stuba.sk>", "Artem Zaitsev <xzaitsev@stuba.sk>"]
keywords = ["typing", "cli", "productivity"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
license = "MIT"

# version info
# major (x.0.0) - breaking changes, incompatible with previous versions
# minor (1.y.0) - new features added without breaking existing functionality
# patch (1.0.z) - bug fixes that do not change behavior
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

# repository info
repository = "https://github.com/admtrv/TypeCrab.git"
homepage = "https://github.com/admtrv/TypeCrab"

# exclude unnecessary files
exclude = ["target/", ".idea/", ".git/", ".gitignore"]

# dependencies
[dependencies]
