# Cargo.toml

# workspace defines
[workspace]
resolver = "2"
members = ["core", "cli", "web"]

# workspace metadata
[workspace.package]

# project info
description = "A minimalistic, customizable typing test."
authors = ["Anton Dmitriev <xdmitriev@stuba.sk>", "Artem Zaitsev <xzaitsev@stuba.sk>"]
readme = "README.md"
license = "MIT"

# version info
version = "0.2.0"
edition = "2021"
rust-version = "1.78"

# repository info
repository = "https://github.com/admtrv/TypeCrab.git"
homepage = "https://github.com/admtrv/TypeCrab"

# other metadata
keywords = ["typing", "cli", "productivity"]
categories = ["command-line-utilities", "text-processing"]

# unnecessary files exclude
exclude = ["target/", ".idea/", ".git/", ".gitignore"]

# workspace dependensies
[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
wasm-bindgen = "0.2"
rand = "0.9.0"
ratatui = "0.29.0"
crossterm = "0.28"
unicode-width = "0.2"