# cli/Cargo.toml

[package]
name = "cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "typecrab"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }