# cli/Cargo.toml

[package]
name = "cli"
version = "1.0.0"
authors = ["Anton Dmitriev <xdmitriev@stuba.sk>"]
edition = "2021"

[[bin]]
name = "typecrab"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }