[package]
name = "web"
version = "0.1.0"
authors = ["Artem Zaitsev <Aldeimeter666@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
typingcore = { package="core", path = "../core" }
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3.77", features = ["console", "Storage", "Window"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4", "js"] }
dioxus-std = "0.4"
dioxus-toast = { version = "0.6.0", default-features=false, features = ["web"] }

[features]
default = ["web"]
web = ["dioxus/web"] 
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
